@@ -26,6 +26,9 @@ Revision history for autodie
         * DOCUMENTATION: Noted the 5.8 string eval bug in
           autodie/BUGS.
 
+        * TEST: Expanded tests to ensure autodie::exception returns
+          the correct line number and caller.
+
 1.998 Sat Jan  3 11:19:53 AUSEDT 2009
 
         * BUILD: Removed Module::AutoInstall, which previously
